# birthday20

./: .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  hugo.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: event.yml
.github/workflows/: ci.yml  hugo.yml  pre-commit.yml
assets/js/: events_map.js
assets/sass/: style.scss
content/: _index.md  about.md  add-event.md  gifts.md
content/events/: 00_template.md  _index.md  amsterdam.md  copenhagen.md  django-india-chennai-meetup.md  django-india-surat-meetup.md  django-india-x-gdg-lucknow-meetup.md  django-india-x-kolkata-foss-meetup.md  django-london-meetup-may.md  django-london.md  django-meetup-vol-66-decoupling-the-monolith-queue.md  django-on-the-med-2025.md  django-vienna-062025.md  django-vienna-092025.md  django-vienna-112025.md  djangocon-africa-2025.md  djangocon-us-2025.md  europython-2025.md  happy-birthday-python-pescara.md  integrating-ai-with-django-workshop.md  piterpy-2025.md  pybay-2025.md  pycon-colombia-2025.md  pycon-estonia-2025.md  pycon-greece-2025.md  pycon-italia-2025.md  pycon-jp-2025.md  pycon-russia-2025.md  pycon-sweden-2025.md  pycon-thailand-2025.md  pycon-uganda-2025.md  pycon-us-2025.md  pyconfr-2025.md  pyday-valparaiso-2025.md  pyho-2025.md  pyistanbul.md  python-brasil-2025.md  sofia-birthday.md  sofia.md  swiss-python-summit-2025.md  (+4 more)
content/timeline/: 00_template.md  2005-07-13-first-commit.md  2005-07-15-djangoproject.com.md  2005-11-16-first-pypi-release.md  2005-no-migrations.md  (+23 more)
data/: events.json
scripts/: import_event_from_issue.py  import_events_json.py
(+22 files in other folders)
