[project]
name = "django-birthday20"
version = "0.1.0"
description = "20th birthday celebration website for Django project"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "hugo==0.148.2",
]

[tool.uv]
package = false
# The earliest version that supports the current lock file revision
required-version = ">=0.8.4"
